welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
    var color:Boolean
        ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
   else if (getCouleurSol()==Color.green){return color=true}
                                                      ^