welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var color:Boolean
    avance()
    if (!estFaceMur){return true}
    
   else if (getCouleurSol()==Color.green){return color=true}
    
    
    
    return color
    
    
    // Write your code here
}        
